--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "**/*.{ts,tsx,js,jsx,css,scss,md,json}": "prettier --write"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "sass": "^1.93.2"
@@ -37,6 +39,8 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -47,6 +51,7 @@
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
+    "playwright": "^1.56.1",
     "storybook": "^9.1.13",
     "stylelint": "^16.25.0",
     "stylelint-config-clean-order": "^7.0.0",
@@ -57,9 +62,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.56.1",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
